examples/test/testpolicy12360.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12360
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key13: value49
      key6: value37
      key37: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value3
      podSelector:
        matchLabels:
          key17: value37
          key28: value39
